terraria-journey-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  labels:
    io.kompose.service: terraria-journey
  name: terraria-journey
  namespace: games
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: terraria-journey
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      labels:
        io.kompose.service: terraria-journey
    spec:
      containers:
      - env:
        - name: world
          value: Journey.wld
        image: beardedio/terraria:vanilla-latest
        imagePullPolicy: "Always"
        name: terraria-journey
        ports:
        - containerPort: 7777
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: terraria-journey
        stdin: true
        tty: true  
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: terraria-journey
        persistentVolumeClaim:
          claimName: terraria-journey-pvc
status: {}
