expert-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: expert
  name: expert
spec:
  ports:
  - name: "7778"
    port: 7778
    targetPort: 7777
  selector:
    io.kompose.service: expert
status:
  loadBalancer: {}
