terraria-expert-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: terraria-expert-lb
  namespace: games
spec:
  ports:
  - name: terraria-expert
    nodePort: 30788
    port: 7788
    protocol: TCP
    targetPort: t-expert-port
  selector:
    io.kompose.service: terraria-expert
  sessionAffinity: None
  type: LoadBalancer
