terraria-journey-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: terraria-journey-lb
  namespace: games
spec:
  ports:
  - name: terraria-journey
    nodePort: 30789
    port: 7789
    protocol: TCP
    targetPort: t-journey-port
  selector:
    io.kompose.service: terraria-journey
  sessionAffinity: None
  type: LoadBalancer
