vm_nw-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: vm_nw
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/vm_nw: "true"
  podSelector:
    matchLabels:
      io.kompose.network/vm_nw: "true"
